--- a/myshop/shop/templates/registration/login.html
+++ b/myshop/shop/templates/registration/login.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Log-in{% endblock %}
+{% load static %}
+<head>
+    <meta charset="utf-8" />
+    <title>{% block title %}D&S Shoes{% endblock %}</title>
+    <link href="{% static "css/login.css" %}" rel="stylesheet">
+</head>
 {% block content %}
     <h1>Log-in</h1>
     {% if form.errors %}
@@ -8,14 +13,19 @@
             Please try again.
         </p>
     {% else %}
-        <p>Please, use the following form to log-in:</p>
     {% endif %}
     <div class="login-form">
-        <form action="{% url 'shop:login' %}" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ product_list }}" />
-            <p><input type="submit" value="Log-in"></p>
-        </form>
+        <div>
+            <form action="{% url 'shop:login' %}" method="post">
+                {{ form.as_p }}
+                {% csrf_token %}
+                <input type="hidden" name="next" value="{{ product_list }}" />
+                <p><input type="submit" value="Log-in"></p>
+            </form>
+        </div>
+        <div class="create-user">
+            <p>Not a user?</p>
+            <a><button class="create-button">Create a User</button></a>
+        </div>
     </div>
 {% endblock %}
