--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div id="sidebar">
-        <h3>Categories</h3>
+        <h3>Brands</h3>
         <ul>
             <li {% if not category %}class="selected"{% endif %}>
             <a href="{% url "shop:product_list" %}">All</a>
